kubernetes/apps/default/kube/apiserver/route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.m00nlit.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-apiserver-route
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames: ["k8s.${MAIN_DOMAIN}"]
  rules:
    - backendRefs:
        - name: kubernetes
          port: 443
---
# yaml-language-server: $schema=https://k8s-schemas.m00nlit.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-oidc-discovery
spec:
  parentRefs:
    - name: tunnel
      namespace: network
  hostnames: ["k8s.${MAIN_DOMAIN}"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/openid-configuration
        - path:
            type: PathPrefix
            value: /openid/v1/jwks
      backendRefs:
        - name: kubernetes
          port: 443
